public class Address {
    private String houseNumber;
    private String cityName;
    private String countryName;
    private String streetName;
    private String stateName;

}
