public class BillingInformation {
    private String receiverPhoneNumber;
    private String receiverName;
    private Address deliveryAddress;
    private CreditCardInformation creditCardInformation;

}
