public enum CardType {
    MASTER_CARD, VISA_CARD, VERVE, AMERICA_EXPRESS;
}
