public class CreditCardInformation {
    private String cardNumber;
    private String nameOnCard;
    private String cardType;
    private String cardCVV;
    private String expiryYear;
    private String expiryMonth;

}
