public class Item {
    private int quantity;
    private Product product;
}

