public class Product {
  private String productId;
  private  String productName;
  private double price;
  private String productDescription;
  private ProductCategory category;
}
