public enum ProductCategory {
    ELECTRONICS, GROCERIES, UTENSILS, CLOTHING;
}

