public class Seller extends User {
    
}
