import java.util.List;

public class ShoppingCart {
    private List<Item> items;
}
