public abstract class User {
    private String name;
    private int age;
    private String phone;
    private String email;
    private String address;
    private String homeAddress;
    private String password;

}

